# jean

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/superpowers/plans/: 2026-07-11-external-config-plugin-loading.md  2026-07-13-remote-mcp-env-expansion.md  2026-07-13-session-transcript-persistence.md  2026-07-14-mention-gated-engagement.md  2026-07-15-risk-classified-approval-gate.md
docs/superpowers/specs/: 2026-07-11-external-config-plugin-loading-design.md  2026-07-13-remote-mcp-env-expansion-design.md  (+3 more)
scripts/: verify.sh
src/jean/: __main__.py  agent_options.py  config.py  health.py  ports.py  server.py
tests/: store_behavior.py  test_agent_options.py  test_approval_policy.py  test_authz.py  test_can_use_tool.py  test_cleanup.py  test_config.py  test_decision_scope.py  test_dispatch.py  test_engagement.py  test_env_refs.py  test_gate.py  test_gateway_app.py  test_git_resolver.py  test_health.py  test_local_transcripts.py  test_manifest.py  test_mcp_client.py  test_mcp_config.py  test_mcp_probe.py  test_mcp_proxy.py  test_memory_store.py  test_mrkdwn.py  test_persona_extract.py  test_persona_identity.py  test_persona_model.py  test_ports.py  test_postgres_pool.py  test_postgres_store.py  test_risk.py  test_server_import.py  test_server_wiring.py  test_session.py  test_session_manager.py  test_slack_client.py  test_slack_mcp.py  test_smoke.py  test_tool_permission.py
(+27 files in other folders)
