[project]
name = "jean"
version = "0.1.0"
description = "Slack-native Claude Code runtime"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk==0.2.110",
    "anthropic>=0.40",
    "slack-bolt[async]>=1.29",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
]

[project.scripts]
jean = "jean.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jean"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade, B bugbear, SIM simplify,
# ASYNC async pitfalls. Keep the set tight so it guides without nagging.
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = [
    "E501",    # line length is handled by the formatter, not the linter
    "B008",    # allow function calls in argument defaults (FastAPI/click-style DI patterns)
    "ASYNC109", # `timeout` is the deliberate ApprovalCoordinator.wait() param name (ports.py)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False patterns in tests
